kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: repeatwise
  labels:
    name: repeatwise
    app: repeatwise
